[package]
name = "dse-bd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" } # reqwest with JSON parsing support
scraper = "0.18.1"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
